[package]
name = "frontier-template-runtime"
version = "2.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Unlicense"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }

frame-executive = {  default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
frame-support = {  default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
frame-system = {  default-features = false, package = "frame-system", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
frame-system-rpc-runtime-api = {  default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }

pallet-ethereum = { default-features = false, path = "../../frame/ethereum" }
pallet-evm = {  default-features = false, path = "../../frame/evm" }
pallet-evm-precompile-simple = {  default-features = false, path = "../../frame/evm/precompile/simple" }
pallet-aura = {  default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
pallet-balances = {  default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
pallet-grandpa = {  default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
pallet-randomness-collective-flip = {  default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
pallet-sudo = {  default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
pallet-timestamp = {  default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
pallet-transaction-payment = {  default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
pallet-transaction-payment-rpc-runtime-api = {  default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }

sp-api = {  default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-block-builder = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0"}
sp-consensus-aura = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-core = {  default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-inherents = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0"}
sp-io = {  default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-offchain = {  default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-runtime = {  default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-session = {  default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-std = {  default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-transaction-pool = {  default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-version = {  default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }

fp-rpc = { default-features = false, path = "../../primitives/rpc" }

[build-dependencies.wasm-builder-runner]
package = 'substrate-wasm-builder-runner'
version = '1.0.5'

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",

	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"fp-rpc/std",

	"pallet-ethereum/std",
	"pallet-evm/std",
	"pallet-evm-precompile-simple/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",

	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
]
