[package]
name = "frontier-template-test-client"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Ethereum RPC (web3) compatibility layer for Substrate."
license = "GPL-3.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-api = { git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sc-executor = { git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sc-light = { git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sc-consensus = { git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sc-client-api = { git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
substrate-test-client = { git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
frontier-template-runtime = { path = "../../runtime" }