[package]
name = "pallet-evm-precompile-bn128"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "BN128 precompiles for EVM pallet."

[dependencies]
sp-core = {  default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-io = {  default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
fp-evm = { default-features = false, path = "../../../../primitives/evm" }
evm = { git = "https://github.com/clover-network/evm.git", tag = "v0.24.0-clv-banlist", default-features = false, features = ["with-codec"] }
bn = { package = "substrate-bn", version = "0.5", default-features = false }

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-io/std",
	"fp-evm/std",
	"evm/std",
]